--- a/config/database.yml
+++ b/config/database.yml
@@ -2,16 +2,9 @@ default: &default
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  database: dev_test
-  host: localhost
-  username: devtest
-  password: 1234
 development:
   <<: *default
-  database: dev_test
-  host: localhost
-  username: devtest
-  password: 1234
+  database: PortalSolarDevTest_development
 production:
   <<: *default
   database: PortalSolarDevTest_production
